<resources>
    <string name="app_name">Inventory App</string>
    <string name="str_btn_newOrder">Enter new order</string>
    <string name="str_btn_receiveItem">Receive new item</string>
    <string name="str_btn_viewInventory">View inventory</string>
    <string name="str_btn_checkOut">Check out Item</string>
    <string name="str_btn_checkIn">Check in Item</string>
    <string name="str_btn_viewUsed">View items used</string>
    <string name="api_baseurl">https://x2110311x.ddns.net:4443/</string>
    <string name="str_btn_itemViewDetails">View Details</string>
    <string name="str_btn_itemCheckOut">Check Out</string>
    <string name="str_lbl_items">Items in Order:</string>
    <string name="str_hint_addItem">Add Item</string>
    <string name="str_txt_OrderNumber">Order Number</string>
    <string name="btn_orderpage_add">Add Order</string>
    <string name="btn_add_item">Add Item</string>
</resources>